# DigiByte-Q-ID

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  pyproject.toml
contracts/: adamantine_qid_evidence_v1.json  adamantine_qid_evidence_v2.json  api_surface_v0_1.json  guardian_qid_auth_request_v1.json  guardian_qid_event_v1.json  manifest_v0_1.json
docs/: qid-adamantine-integration.md  qid-api-server.md  qid-crypto-backends.md  qid-example-server.md  qid-guardian-integration.md  qid-guardian-v3-auth-integration.md  qid-server-guide.md  qid-spec.md  qid-threat-model.md  qid-v1.1.0-release-plan.md  qid-vision.md
examples/: example_server.py  guardian_v3_auth_roundtrip.py
qid/: __init__.py  algorithms.py  anchors.py  binding.py  canonical.py  canonical_profiles.py  crypto.py  hybrid_key_container.py  models.py  policies.py  pqc_backends.py  pqc_sign.py  pqc_verify.py  protocol.py  qr_payloads.py  uri_scheme.py
tests/: conftest.py  test_binding_and_pqc_coverage.py  test_binding_hardening.py  test_binding_negative.py  test_binding_time_and_expiry_negative.py  test_binding_time_guards.py  test_binding_v1.py  test_canonical_json_profiles.py  test_canonical_lock.py  test_contract_manifest_v0_1.py  test_coverage_boost.py  test_coverage_boost_no_risk_pqc_units.py  test_coverage_boost_pqc_extra.py  test_coverage_boost_targeted_95.py  test_coverage_last_mile.py  test_coverage_push_phase2.py  test_coverage_push_phase3.py  test_coverage_push_phase4.py  test_coverage_push_phase5.py  test_crypto.py  test_models.py  (+35 more)
(+41 files in other folders)
