[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dgb_qid"
version = "0.0.1"
description = "Quantum-secure successor to Digi-ID for passwordless authentication on DigiByte."
authors = [
    { name = "DarekDGB" }
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["qid*"]
